# pico2dexed

./: .gitignore  CMakeLists.txt  README.md  getvoices.sh
miditones/: CMakeLists.txt  miditones.h  miditonesFile.cpp  miditonesFile.h  miditonesSettings.h
src/: config.h  main.cpp  miditonesDriver.h  picodexed.cpp  voices.h
synth_dexed/Synth_Dexed/: README.md  keywords.txt  library.properties  name.c
synth_dexed/Synth_Dexed/examples/Banks/: Banks.ino  banks.h
synth_dexed/Synth_Dexed/examples/SimplePlay/: SimplePlay.ino
synth_dexed/Synth_Dexed/examples/SimplePlayAndEngineChange/: SimplePlayAndEngineChange.ino  name.c
synth_dexed/Synth_Dexed/src/: .env.cpp.swp  EngineMkI.cpp  EngineMkI.h  EngineMsfa.cpp  EngineMsfa.h  EngineOpl.cpp  EngineOpl.h  PluginFx.cpp  PluginFx.h  aligned_buf.h  compressor.h  controllers.h  dexed.cpp  dexed.h  dx7note.cpp  dx7note.h  env.cpp  env.h  exp2.h  fm_core.cpp  fm_core.h  fm_op_kernel.cpp  fm_op_kernel.h  freqlut.cpp  lfo.cpp  lfo.h  pitchenv.cpp  pitchenv.h  porta.cpp  sin.cpp  sin.h  synth.h  synth_dexed.cpp  synth_dexed.h
synth_dexed/Synth_Dexed/tools/: gen_includes.sh  includes.txt  sysex2c.py
synth_dexed/Synth_Dexed/tools/sysex/: test.syx
